--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "gen": "tsx scripts/typegen.ts",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
-    "typeCheck": "tsc"
+    "typeCheck": "tsc",
+    "prepare": "husky"
   },
   "peerDependencies": {
     "@stylistic/eslint-plugin": "^5.2.2",
@@ -40,6 +41,9 @@
     "typescript-eslint": "^8.38.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
+    "@commitlint/types": "^19.8.1",
     "@rollup/plugin-typescript": "^12.1.4",
     "@stylistic/eslint-plugin": "^5.2.2",
     "@types/node": "^24.1.0",
@@ -49,6 +53,7 @@
     "eslint-plugin-jsonc": "^2.20.1",
     "eslint-typegen": "^2.3.0",
     "globals": "^16.3.0",
+    "husky": "^9.1.7",
     "jiti": "^2.5.1",
     "jsonc-eslint-parser": "^2.4.0",
     "rollup": "^4.46.2",
