--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "keywords": [
     "chanyuxi",
     "eslint",
-    "config"
+    "config",
+    "integration"
   ],
   "exports": {
-    "types": "./dist/index.d.ts",
-    "import": "./dist/index.js",
-    "default": "./dist/index.js"
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "default": "./dist/index.js"
+    }
   },
   "files": [
     "dist"
@@ -36,6 +39,12 @@
     "eslint-config-flat-gitignore": "^2.1.0",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jsonc": "^2.20.1",
+    "eslint-plugin-react-debug": "^1.52.3",
+    "eslint-plugin-react-dom": "^1.52.3",
+    "eslint-plugin-react-hooks-extra": "^1.52.3",
+    "eslint-plugin-react-naming-convention": "^1.52.3",
+    "eslint-plugin-react-web-api": "^1.52.3",
+    "eslint-plugin-react-x": "^1.52.3",
     "globals": "^16.3.0",
     "jsonc-eslint-parser": "^2.4.0",
     "typescript-eslint": "^8.38.0"
@@ -51,6 +60,12 @@
     "eslint-config-flat-gitignore": "^2.1.0",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jsonc": "^2.20.1",
+    "eslint-plugin-react-debug": "^1.52.3",
+    "eslint-plugin-react-dom": "^1.52.3",
+    "eslint-plugin-react-hooks-extra": "^1.52.3",
+    "eslint-plugin-react-naming-convention": "^1.52.3",
+    "eslint-plugin-react-web-api": "^1.52.3",
+    "eslint-plugin-react-x": "^1.52.3",
     "eslint-typegen": "^2.3.0",
     "globals": "^16.3.0",
     "husky": "^9.1.7",
