--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@chanyuxi/eslint-waltz",
   "type": "module",
-  "version": "0.0.0-alpha.1",
+  "version": "0.0.0-alpha.2",
   "packageManager": "pnpm@10.4.1",
   "description": "Great, all I can say is thank you @antfu/eslint-config",
   "author": "chanyuxi <2438149743@qq.com> (https://github.com/chanyuxi)",
@@ -26,7 +26,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "pnpm gen && rollup -c rollup.config.ts --configPlugin @rollup/plugin-typescript",
+    "build": "rimraf ./dist && pnpm gen && rollup -c rollup.config.ts --configPlugin @rollup/plugin-typescript",
     "gen": "tsx scripts/typegen.ts",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
@@ -53,6 +53,9 @@
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@commitlint/types": "^19.8.1",
+    "@rollup/plugin-commonjs": "^28.0.6",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-typescript": "^12.1.4",
     "@stylistic/eslint-plugin": "^5.2.2",
     "@types/node": "^24.1.0",
@@ -71,6 +74,7 @@
     "husky": "^9.1.7",
     "jiti": "^2.5.1",
     "jsonc-eslint-parser": "^2.4.0",
+    "rimraf": "^6.0.1",
     "rollup": "^4.46.2",
     "rollup-plugin-delete": "^3.0.1",
     "rollup-plugin-dts": "^6.2.1",
